[feat] add to cart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.15
   badges: ^2.0.3
+  localstorage: ^4.0.0+1
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
